Project

General

Profile

Actions

Bug #59218

open

sse: multipart uploads aren't using default encryption policy

Added by Casey Bodley about 1 year ago. Updated about 1 year ago.

Status:
Pending Backport
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
sse multipart backport_processed
Backport:
quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 3 (1 open2 closed)

Has duplicate rgw - Bug #58473: PutBucketEncryption default policy does not apply to multipart uploadsDuplicateMarcus Watts

Actions
Copied to rgw - Backport #59355: quincy: sse: multipart uploads aren't using default encryption policyNewMarcus WattsActions
Copied to rgw - Backport #59356: reef: sse: multipart uploads aren't using default encryption policyResolvedMarcus WattsActions
Actions #1

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #2

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59355: quincy: sse: multipart uploads aren't using default encryption policy added
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59356: reef: sse: multipart uploads aren't using default encryption policy added
Actions #4

Updated by Backport Bot about 1 year ago

  • Tags changed from sse multipart to sse multipart backport_processed
Actions #5

Updated by Casey Bodley about 1 year ago

  • Has duplicate Bug #58473: PutBucketEncryption default policy does not apply to multipart uploads added
Actions

Also available in: Atom PDF